--- a/core/app/templates/app/customize_chart.html
+++ b/core/app/templates/app/customize_chart.html
@@ -1,17 +1,18 @@
 {% extends 'app/base.html' %}
-{% load static %}
+
+{% block title %}Customize Chart{% endblock %}
 
 {% block content %}
-<div>
-    <div id="chart_div3">
-        {% block chart_content %}
-            <form action="{% url 'customize_chart' %}" method="POST"> {# Correct URL name used here #}
-                {% csrf_token %}
-                {{ form }}
-                <button type="submit">Show</button>
-            </form>
-            {{ chart9|safe }}
-        {% endblock %}
+    <h1>Customized chart for detailed failure type</h1>
+    
+    <form method="POST">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Generate Chart</button>
+    </form>
+    
+    <div>
+        <!-- Placeholder for the chart -->
+        {{ chart | safe }}
     </div>
-</div>
 {% endblock %}
