--- a/core/app/templates/app/base.html
+++ b/core/app/templates/app/base.html
@@ -7,24 +7,74 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Predictive Analytics{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'base.css' %}">
-    <script src="https://cdn.jsdelivr.net/npm/plotly.js-dist-min@2.30.1/plotly.min.js"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <style>
+        /* Custom CSS for the vertical navbar */
+        .navbar-nav {
+            margin-top: 20px;
+        }
+        .navbar-nav a {
+            color: #333;
+        }
+    </style>
 </head>
 <body>
-    <!-- <img src="https://coselifootwear.com/wp-content/uploads/2021/11/coseli-logoblk-1-150x150.png" alt="Project logo. Represents odin with the project name."> -->
-
-   
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav flex-column">
+                <li class="nav-item active">
+                    <a href="{% url 'display_base' %}">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="{% url 'combined_charts' %}">EDA</a>
+                </li>
+                <li class="nav-item">
+                    <a href="{% url 'customize_chart' %}">Failure Data</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Model Performance</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Predict</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
     <div class="content">
-       
         <div class="chart">
             {% block content %}
-            <!-- This block will be overridden by content from other templates -->
+            <ol>
+                <h1>About the dataset</h1>
+                <li>Please note that this is the original dataset with additional information and proper attribution. There is at least one other version of this dataset on Kaggle that was uploaded without permission. Please be fair and attribute the original author. This synthetic dataset is modeled after an existing milling machine and consists of 10 000 data points from a stored as rows with 14 features in columns</li>
+                <li>UID: unique identifier ranging from 1 to 10000</li>
+                <li>product ID: consisting of a letter L, M, or H for low (50% of all products), medium (30%) and high (20%) as product quality variants and a variant-specific serial number</li>
+                <li>type: just the product type L, M or H from column 2</li>
+                <li>air temperature [K]: generated using a random walk process later normalized to a standard deviation of 2 K around 300 K</li>
+                <li>process temperature [K]: generated using a random walk process normalized to a standard deviation of 1 K, added to the air temperature plus 10 K.</li>
+                <li>rotational speed [rpm]: calculated from a power of 2860 W, overlaid with a normally distributed noise</li>
+                <li>torque [Nm]: torque values are normally distributed around 40 Nm with a SD = 10 Nm and no negative values.</li>
+                <li>tool wear [min]: The quality variants H/M/L add 5/3/2 minutes of tool wear to the used tool in the process.</li>
+                <li>a 'machine failure' label that indicates, whether the machine has failed in this particular datapoint for any of the following failure modes are true.</li>
+                <li>The machine failure consists of five independent failure modes</li>
+                <ul>
+                    <li>tool wear failure (TWF): the tool will be replaced of fail at a randomly selected tool wear time between 200 - 240 mins (120 times in our dataset). At this point in time, the tool is replaced 69 times, and fails 51 times (randomly assigned).</li>
+                    <li>heat dissipation failure (HDF): heat dissipation causes a process failure, if the difference between air- and process temperature is below 8.6 K and the tools rotational speed is below 1380 rpm. This is the case for 115 data points.</li>
+                    <li>power failure (PWF): the product of torque and rotational speed (in rad/s) equals the power required for the process. If this power is below 3500 W or above 9000 W, the process fails, which is the case 95 times in our dataset.</li>
+                    <li>overstrain failure (OSF): if the product of tool wear and torque exceeds 11,000 minNm for the L product variant (12,000 M, 13,000 H), the process fails due to overstrain. This is true for 98 data points.</li>
+                    <li>random failures (RNF): each process has a chance of 0.1% to fail regardless of its process parameters. This is the case for only 5 data points, less than could be expected for 10,000 data points in our dataset. If at least one of the above failure modes is true, the process fails and the 'machine failure' label is set to 1. It is therefore not transparent to the machine learning method, which of the failure modes has caused the process to fail.</li>
+                </ul>
+            </ol>
+            <h1>Pairplot for the Data</h1>
+            <img src="{% static 'img/pairpolot.png' %}" alt="Pairplot for the data">
             {% endblock %}
         </div>
     </div>
+    
     <footer>
-        <!-- Add your footer content here -->
         <p>&copy; 2024 ashesh-lal All rights reserved.</p>
     </footer>
-
 </body>
 </html>
