--- a/core/app/templates/app/base.html
+++ b/core/app/templates/app/base.html
@@ -20,9 +20,6 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav flex-column">
                 <li class="nav-item active">
@@ -38,8 +35,8 @@
                     <a class="nav-link" href="#">Model Performance</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Predict</a>
-                </li>
+                    <a href="{% url 'predict_failure_type' %}">Predict Failure Type</a>
+                </li>                
             </ul>
         </div>
     </nav>
