--- a/core/app/templates/app/form1.html
+++ b/core/app/templates/app/form1.html
@@ -3,7 +3,7 @@
 {% block content %}
 <body>
     <div class="form-container">
-        <h2 class="text-center mb-3">Predict The Type of Failure in your machine</h2>
+        <h2 class="text-center mb-3">Predict the type of Failure</h2>
         <form method="post">
             {% csrf_token %}
             <div class="form-group">
