both models initialized and verified

--- a/core/app/templates/app/base.html
+++ b/core/app/templates/app/base.html
@@ -35,6 +35,9 @@
                     <a class="nav-link" href="#">Model Performance</a>
                 </li>
                 <li class="nav-item">
+                    <a href="{% url 'predict_failure' %}">Predict Failure</a>
+                </li> 
+                <li class="nav-item">
                     <a href="{% url 'predict_failure_type' %}">Predict Failure Type</a>
                 </li>                
             </ul>
