front end added

--- a/core/app/templates/app/model_performance.html
+++ b/core/app/templates/app/model_performance.html
@@ -4,12 +4,12 @@
 {% block content %}
 <h1>PERFORMANCE OF THE MODELS</h1>
 <h2>Performance of different models in predicting whether the machine will fail or not:</h2>
-<img src="{% static 'img/performance1.png' %}" alt="Pairplot for the data">
+<img src="{% static 'img/performance1.png' %}" alt="Pairplot for the data" style="display: block; margin: 0 auto;">
 <h2>Confusion matrix in predicting the failure of the machine (RANDOM FOREST)</h2>
-<img src="{% static 'img/Confusion1.png' %}" alt="Pairplot for the data">
+<img src="{% static 'img/Confusion1.png' %}" alt="Pairplot for the data" style="display: block; margin: 0 auto;"" width="600" height="600">
 <h2>Performance of different models in predicting the type of machine failure:</h2>
-<img src="{% static 'img/performance2.png' %}" alt="Pairplot for the data">
+<img src="{% static 'img/performance2.png' %}" alt="Pairplot for the data" style="display: block; margin: 0 auto;"">
 <h2>Confusion matrix in predicting the type of machine failure (RANDOM FOREST)</h2>
-<img src="{% static 'img/Confusion2.png' %}" alt="Pairplot for the data">
+<img src="{% static 'img/Confusion2.png' %}" alt="Pairplot for the data"style="display: block; margin: 0 auto;" width="600" height="600">
 
 {% endblock %}
